--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "paths": {
       "$icon/*": ["src/media/icons/*"],
+      "$img/*": ["src/media/images/*"],
       "$comp/*": ["src/modules/components/*"],
       "$layout/*": ["src/modules/layouts/*"],
       "$part/*": ["src/modules/parts/*"],
