--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
-    "astro": "^5.11.0"
+    "astro": "^5.11.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4"
