--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**"]
+		"includes": ["**", "!.astro"]
 	},
 	"formatter": {
 		"enabled": true,
